# photo-diff

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json
geo-diff/: .env.example  README.md  pyproject.toml
geo-diff/internal/: pyproject.toml
geo-diff/internal/src/geo_diff_internal/: __init__.py
geo-diff/internal/src/geo_diff_internal/adapters/: __init__.py  embedder_adapter.py
geo-diff/scripts/: sentinel_cog_demo.py
geo-diff/src/geo_diff/: app.py  image_base64.py  settings.py
geo-diff/src/geo_diff/demo/: demo_embedding.py  raster_tile_fetcher.py
geo-diff/src/geo_diff/services/: comparison.py  embedder_factory.py  embedding.py  service.py  similarity.py
geo-diff/tests/: test_cli.py  test_comparison_service.py  test_demo_raster_tile_fetcher.py  test_embedder_factory.py  test_embedding_service.py  test_geo_diff_service.py  test_image_base64.py  test_routes.py  test_settings.py
scripts/: sentinel_cog_demo.py
src/geo_diff/: __init__.py  app.py  cli.py  settings.py
src/geo_diff/demo/: __init__.py  raster_tile_fetcher.py
src/geo_diff/services/: comparison.py  service.py
src/photo_diff/: __init__.py  api.py  app.py  cli.py  config.py  constants.py  image_input.py  settings.py
src/photo_diff/services/: comparison.py  embedding.py  service.py
src/tile_fetcher/: __init__.py  app.py  cli.py  constants.py  errors.py  http.py  settings.py
src/tile_fetcher/services/: __init__.py  models.py  service.py
src/tile_fetcher/utils/: __init__.py  image_provider.py  projection_mapper.py
tests/: test_api.py  test_app.py  test_cli.py  test_config.py  test_demo_raster_tile_fetcher.py  test_embedding_service.py  test_geo_diff_service.py  test_image_input.py  test_routes.py  test_service.py  test_settings.py  test_tile_fetcher_service.py
tile-fetcher/: .env.example  README.md  pyproject.toml
tile-fetcher/internal/: pyproject.toml  pyrightconfig.json
tile-fetcher/internal/src/tile_fetcher_internal/: __init__.py
tile-fetcher/internal/src/tile_fetcher_internal/adapters/: __init__.py  image_provider.py  projection_mapper.py
tile-fetcher/src/tile_fetcher/: __init__.py  app.py  cli.py  http.py  settings.py
tile-fetcher/src/tile_fetcher/services/: __init__.py  factory.py  models.py  service.py
tile-fetcher/src/tile_fetcher/utils/: __init__.py  image_provider.py  projection_mapper.py
tile-fetcher/tests/: test_factory.py  test_tile_fetcher_service.py
