[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "tile-fetcher"
version = "0.1.0"
description = "Reusable tile fetching library and FastAPI service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "pydantic-settings>=2.3.0",
    "shapely>=2.0.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
tile-fetcher = "tile_fetcher.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tile_fetcher"]
