[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "geo-diff-internal"
version = "0.1.0"
description = "Internal adapters and dependencies for geo-diff"
requires-python = ">=3.12"
dependencies = [
    "tile-fetcher-internal",
]

[tool.uv.sources]
tile-fetcher-internal = { path = "../../tile-fetcher/internal" }

[tool.hatch.build.targets.wheel]
packages = ["src/geo_diff_internal"]
